--- a/MyResume/assets/css/style.css
+++ b/MyResume/assets/css/style.css
@@ -247,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/portfolio.jpg") top right no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -260,7 +260,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.6);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -308,6 +308,8 @@ h1, h2, h3, h4, h5, h6 {
 @media (max-width: 992px) {
   #hero {
     text-align: center;
+    background-position: relative;
+    background-position-x: -300px;
   }
   #hero h1 {
     font-size: 32px;
